# ValueCheck

./: BUILD_SPEC.md
ValueCheck/: CLAUDE.md
ValueCheck/platform/: .env.example  .gitignore  .importlinter  Makefile  README.md  pyproject.toml
ValueCheck/platform/scripts/: export_openapi.py  live_smoke.py  seed_demo.py
ValueCheck/platform/src/equity/: __init__.py  config.py  errors.py  logging.py
ValueCheck/platform/src/equity/adapters/: __init__.py
ValueCheck/platform/src/equity/adapters/filings/: __init__.py  concepts.py  edgar.py
ValueCheck/platform/src/equity/adapters/market/: __init__.py  mock.py  yfinance.py
ValueCheck/platform/src/equity/adapters/persistence/: __init__.py  mappers.py  schema.sql  sqlite.py
ValueCheck/platform/src/equity/adapters/persistence/migrations/: 0001_initial.sql  0002_search.sql  0003_attributes.sql  0004_reference_library.sql  0005_analysis.sql
ValueCheck/platform/src/equity/adapters/search/: __init__.py  fts5.py
ValueCheck/platform/src/equity/api/: __init__.py  deps.py  main.py
ValueCheck/platform/src/equity/api/routers/: __init__.py  analyses.py  attributes.py  companies.py  graph.py  notes.py  references.py  screener.py  search.py  tags.py  valuations.py
ValueCheck/platform/src/equity/api/schemas/: __init__.py  analysis.py  attributes.py  company.py  explore.py  references.py  research.py  screener.py  valuation.py
ValueCheck/platform/src/equity/application/: __init__.py  analysis_service.py  attribute_service.py  container.py  graph_service.py  ingestion_service.py  reference_service.py  research_service.py  screener_service.py  search_service.py  valuation_service.py
ValueCheck/platform/src/equity/domain/: __init__.py  analysis.py  assumptions.py  attributes.py  dcf.py  metrics.py  models.py  references.py  research.py  valuation.py
ValueCheck/platform/src/equity/ports/: __init__.py  filings.py  market.py  repository.py  search.py
ValueCheck/platform/tests/: conftest.py
ValueCheck/platform/tests/api/: conftest.py  test_analyses_api.py  test_attributes_api.py  test_companies_api.py  test_explore_api.py  test_references_api.py  test_research_api.py  test_screener_api.py  test_valuations_api.py
ValueCheck/platform/tests/contract/: test_edgar_contract.py  test_mock_market.py  test_yfinance_contract.py
ValueCheck/platform/tests/integration/: conftest.py  test_analysis_repo.py  test_analysis_service.py  test_attribute_repo.py  test_attribute_service.py  test_company_repo.py  test_graph.py  test_migrations.py  test_note_repo.py  test_reference_repo.py  test_reference_service.py  test_research_service.py  test_screener_service.py  test_search.py  test_valuation_flow.py  test_valuation_repo.py
ValueCheck/platform/tests/unit/: test_boundaries.py  test_config.py  test_health.py
ValueCheck/platform/tests/unit/domain/: conftest.py  test_assumptions.py  test_dcf.py  test_dcf_warnings.py  test_enrichment.py  test_metrics.py  test_models.py  test_sensitivity.py
ValueCheck/seed/: data.py  engine.py  market.py  run_market.py
ValueCheck/web/: .env.example  .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ValueCheck/web/src/: App.tsx  main.tsx
ValueCheck/web/src/api/: client.ts  hooks.ts
ValueCheck/web/src/features/balcony/: AnalysisDetail.tsx  BalconyView.tsx
ValueCheck/web/src/features/company/: AssumptionsPanel.test.tsx  AssumptionsPanel.tsx  AttributesPanel.tsx  CompanyWorkspace.tsx  HistoricalsTable.tsx  SensitivityGrid.test.tsx  SensitivityGrid.tsx  ValuationResult.tsx
ValueCheck/web/src/features/graph/: GraphView.tsx  mapGraph.test.ts  mapGraph.ts
ValueCheck/web/src/features/notes/: NoteEditor.test.tsx  NoteEditor.tsx  NotesSection.tsx  TagInput.test.tsx  TagInput.tsx
ValueCheck/web/src/features/screener/: ScreenerView.tsx
ValueCheck/web/src/features/search/: SearchPanel.tsx
ValueCheck/web/src/lib/: format.test.ts  format.ts
ValueCheck/web/src/styles/: app.css
seed/: run.py
