[project]
name = "equity"
version = "0.1.0"
description = "Local-first, production-grade equity research platform (DCF valuations from real filings + market data)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "ValueCheck" }]

# Phase-scoped runtime dependencies. Approved set (see BUILD_SPEC.md §3) is the
# ceiling; we add libraries in the phase that first uses them to stay lean.
# Phase 0: API/config/logging core. Phase 1: numpy + pandas (domain math).
# Phase 2: edgartools + yfinance (filings/market adapters).
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
    "httpx>=0.27",
    "numpy>=1.26",
    "pandas>=2.2",
    "edgartools>=4.0",
    "yfinance>=0.2.50",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "import-linter>=2.0",
    # dev-only: official stubs so mypy --strict covers pandas usage (approved 2026-07-21)
    "pandas-stubs>=2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/equity"]

# --------------------------------------------------------------------------- #
# Ruff — lint + format
# --------------------------------------------------------------------------- #
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "RUF",  # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["equity"]

# --------------------------------------------------------------------------- #
# mypy — strict typing (CLAUDE.md prime directive #5)
# --------------------------------------------------------------------------- #
[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["equity"]
plugins = ["pydantic.mypy"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
no_implicit_reexport = true

# Written reason for the Any escape (CLAUDE.md prime directive #5): edgartools
# and yfinance ship no usable type stubs. Their objects enter typed code as Any
# at the adapter boundary ONLY; everything crossing into the domain is coerced
# to concrete types (float/str/pd.Series) inside the adapters.
[[tool.mypy.overrides]]
module = ["edgar", "yfinance"]
ignore_missing_imports = true
follow_imports = "skip"

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# --------------------------------------------------------------------------- #
# pytest
# --------------------------------------------------------------------------- #
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "contract: contract tests against mocked adapters (CI-safe, offline)",
    "integration: integration tests using local resources (temp sqlite, etc.)",
    "live: live-network smoke tests (never run in CI)",
]
